Table emprendedores {
  emprendedor_id int [pk, increment]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  dni varchar(20) [unique, not null]
  email varchar(100)
  telefono varchar(20)
  direccion varchar(255)
}

Table clients {
  client_id int [pk, increment]
  client_name varchar(100) [not null]
  contact_email varchar(100)
  contact_phone varchar(20)
  billing_address varchar(255)
  emprendedor_id int [not null]
}

Table orders {
  order_id int [pk, increment]
  client_id int [not null]
  order_date date [not null]
  order_number varchar(50) [unique, not null]
  total_amount decimal(10, 2)
  order_status varchar(50)

  Indexes {
    client_id
  }
}

Table order_items {
  order_item_id int [pk, increment]
  order_id int [not null]
  product_id int [not null]
  quantity int [not null]
  unit_price decimal(10, 2) [not null]
  subtotal decimal(10, 2)

  Indexes {
    order_id
    product_id
  }
}

Table products {
  product_id int [pk, increment]
  product_name varchar(100) [not null]
  sku varchar(50) [unique]
  selling_price decimal(10, 2) [not null]
  stock_quantity int [not null, default: 0]
}

Table invoices {
  invoice_id int [pk, increment]
  order_id int [not null]
  invoice_number varchar(50) [unique, not null]
  invoice_date date [not null]
  total_amount_due decimal(10, 2) [not null]
  amount_paid decimal(10, 2) [default: 0]
  payment_status varchar(50)
  client_id int [not null]

  Indexes {
    order_id
    client_id
  }
}

Table payments {
  payment_id int [pk, increment]
  invoice_id int [not null]
  payment_date date [not null]
  payment_amount decimal(10, 2) [not null]
  payment_method varchar(50)

  Indexes {
    invoice_id
  }
}

Ref: clients.emprendedor_id > emprendedores.emprendedor_id
Ref: orders.client_id > clients.client_id
Ref: order_items.order_id > orders.order_id
Ref: order_items.product_id > products.product_id
Ref: invoices.order_id > orders.order_id
Ref: invoices.client_id > clients.client_id
Ref: payments.invoice_id > invoices.invoice_id
